# tonstruct

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  coverage.yml  release.yml
examples/: custom_type.rs  deserialize.rs  serialize.rs
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
src/: error.rs  from_cell.rs  lib.rs  to_cell.rs  utils.rs
src/de/: deserializer.rs  mod.rs  seq.rs
src/ser/: map.rs  mod.rs  seq.rs  serializer.rs  struct.rs  struct_variant.rs  tuple.rs  tuple_struct.rs  tuple_variant.rs
src/types/: address.rs  bool.rs  cell_raw.rs  cell_ref.rs  coins.rs  comment.rs  int.rs  mod.rs  optional.rs  string.rs  uint.rs
tests/: test_de.rs  test_ser.rs
