[package]
name = "tonstruct"
description = "TON blockchain types serialization tool for Rust"
categories = ["parsing", "parser-implementations"]
license = "MIT"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/supadupadao/tonstruct/"
documentation = "https://docs.rs/tonstruct/latest/tonstruct/"
homepage = "https://github.com/supadupadao/tonstruct/"

[dependencies]
anyhow = { version = "1.0.95" }
num-bigint = { version = "0.4.6" }
tonlib-core = { version = "0.23.2 " }
tonstruct_proc_macro = { version = "0.0.1" }
